--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 #navbar{
     background-color: rgb(27, 245, 161);
     color: white;
-    width: 110%;
+    width: 100%;
+    height: 60px;
+    margin: -16px -50px 0 -16px;
 }
