--- a/style.css
+++ b/style.css
@@ -1,7 +1,26 @@
-#navbar{
-    background-color: rgb(27, 245, 161);
+:root {
+    --cor1: #5BE9B9;
+    --cor2: #572ab0;
+}
+
+
+#navbar {
+    background-color: var(--cor1);
     color: white;
-    width: 100%;
-    height: 60px;
-    margin: -16px -50px 0 -16px;
+    height: 65px;
+    margin: -16px -15px 0 -15px;
+}
+
+#navbar li {
+    position: relative;
+    float: right;
+}
+
+li {
+    list-style: none;
+    color: white;
+    font-size: 25px;
+    padding: 20px;
+    padding-right: 50px;
+
 }
