--- a/style.css
+++ b/style.css
@@ -22,5 +22,19 @@ li {
     font-size: 25px;
     padding: 20px;
     padding-right: 50px;
+}
 
+#welcome-section{
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 550px;
+    padding: 20px;
+    margin-left: -16px;
+}
+
+#welcome-section p{
+    color: #572ab0;
+    font-size: 30px;
+    font-family: 'Patrick Hand', cursive;
 }
