--- a/style.css
+++ b/style.css
@@ -4,37 +4,63 @@
 }
 
 
-#navbar {
+.nav{
+    display: flex;
+    justify-content: flex-end ;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
     background-color: var(--cor1);
     color: white;
-    height: 65px;
-    margin: -16px -15px 0 -15px;
+    z-index: 10;
 }
 
-#navbar li {
-    position: relative;
-    float: right;
+.navlink{
+    display: flex;
+    margin-right: 2rem;
+}
+
+a{
+    text-decoration: none;
 }
 
 li {
     list-style: none;
     color: white;
     font-size: 25px;
-    padding: 20px;
-    padding-right: 50px;
+    padding: 10px
 }
 
-#welcome-section{
-    background-color: black;
-    color: white;
+li:hover{
+    background-color: rgba(255, 255, 255, 0.788);
+    border-radius: 25px;
+    color: var(--cor2);
+    
+}
+
+#welcome-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 550px;
-    padding: 20px;
-    margin-left: -16px;
+    height: 100vh;
+    background-color: #000;
 }
 
-#welcome-section p{
+#welcome-section p {
     color: #572ab0;
-    font-size: 30px;
+    font-size: 40px;
     font-family: 'Patrick Hand', cursive;
+    font-style: italic;
+    margin-top: -45px;
+}
+
+#welcome-section h1 {
+    color: white;
+    font-size: 60px;
+    margin-top: 100px;
+    margin-bottom: 50px;
 }
