--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 :root {
-    --cor1: #5BE9B9;
+    --cor1: #00DFC0;
     --cor2: #572ab0;
 }
 
-
-.nav{
+.nav {
     display: flex;
-    justify-content: flex-end ;
+    justify-content: flex-end;
     position: fixed;
     top: 0;
     left: 0;
@@ -17,12 +16,12 @@
     z-index: 10;
 }
 
-.navlink{
+.navlink {
     display: flex;
     margin-right: 2rem;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -33,23 +32,26 @@ li {
     padding: 10px
 }
 
-li:hover{
+li:hover {
     background-color: rgba(255, 255, 255, 0.788);
     border-radius: 25px;
     color: var(--cor2);
-    
+
 }
 
 #welcome-section {
     display: flex;
     flex-direction: column;
+    /*
     justify-content: center;
     align-items: center;
+    */
     width: 100%;
     height: 100vh;
-    background-color: #000;
+    background-color: white;
+    background-image: ;
 }
-
+/*
 #welcome-section p {
     color: #572ab0;
     font-size: 40px;
@@ -58,9 +60,15 @@ li:hover{
     margin-top: -45px;
 }
 
+
 #welcome-section h1 {
-    color: white;
+    color: black;
     font-size: 60px;
     margin-top: 100px;
     margin-bottom: 50px;
 }
+
+*/
+
+
+#projects {}
