--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     background-color: var(--cor1);
     color: white;
     z-index: 10;
+    
 }
 
 .navlink {
@@ -51,28 +52,30 @@ li:hover {
     background-color: white;
     background-image: ;
 }
-/*
-#welcome-section p {
-    color: #572ab0;
-    font-size: 40px;
-    font-family: 'Patrick Hand', cursive;
-    font-style: italic;
-    margin-top: -45px;
-}
-
 
 #welcome-section h1 {
+    font-family: 'Montserrat', sans-serif;
     color: black;
-    font-size: 60px;
-    margin-top: 100px;
-    margin-bottom: 50px;
+    font-size: 50px;
+    margin-top: 250px;
+    margin-left: 30px;
 }
-*/
+
+#welcome-section p {
+    color: #572ab0;
+    font-size: 30px;
+    font-family:  'Work Sans', sans-serif;
+    margin-left: 30px;
+    margin-top: -20px;
+}
+
 .img-secao-um{
     position:absolute;
-	left:65%;
-	top:25%;
+	left:60%;
+	top:20%;
 	
 }
 
-#projects {}
+#projects {
+    background-color: black;
+}
