--- a/style.css
+++ b/style.css
@@ -97,4 +97,8 @@ li:hover {
     }
 }
 
-#projects div {}
+.project-imag{
+    height: calc(100% - 6.8rem);
+    width: 100%;
+    object-fit: cover;
+}
