--- a/style.css
+++ b/style.css
@@ -102,3 +102,13 @@ li:hover {
     width: 100%;
     object-fit: cover;
 }
+
+.projects-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 4rem;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    margin-bottom: 6rem;
+}
