atualizando a página de projetos

--- a/style.css
+++ b/style.css
@@ -97,13 +97,13 @@ li:hover {
     }
 }
 
-.project-imag{
+.project-imag {
     height: calc(100% - 6.8rem);
     width: 100%;
     object-fit: cover;
 }
 
-.projects-grid{
+.projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 4rem;
@@ -111,4 +111,15 @@ li:hover {
     max-width: 1280px;
     margin: 0 auto;
     margin-bottom: 6rem;
+}
+
+
+@media (max-width: 30.625em) {
+    .projects-section {
+        padding: 6rem 1rem;
+    }
+
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
 }
