--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ li:hover {
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 4rem;
     width: 100%;
     max-width: 1280px;
@@ -124,15 +124,14 @@ li:hover {
     }
 }
 
-
 .project {
-    background: var(--main-gray);
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    border-radius: 2px;
+    background: white;
+    box-shadow: 1px 1px 2px rgba(4, 59, 238, 0.5);
+    border-radius: 5px;
 }
 
 .code {
-    color: var(--main-gray);
+    color: #ff7f50;
     transition: color 0.3s ease-out;
 }
 
