--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
     background-color: var(--cor1);
     color: white;
     z-index: 10;
-
 }
 
 .navlink {
@@ -50,7 +49,6 @@ li:hover {
     width: 100%;
     height: 100vh;
     background-color: white;
-    background-image: url(img/1.png);
     background-repeat: no-repeat;
 }
 
@@ -78,17 +76,17 @@ li:hover {
 }
 
 #projects {
-    background-color: black;
+    background-color: white;
     padding: 10rem 2rem;
 
 }
 
 #projects h2 {
-    color: var(--cor2);
+    color: black;
     font-size: 49px;
     max-width: 640px;
     margin: 0 auto 6rem auto;
-    border-bottom: 0.2rem solid var(--cor2);
+    border-bottom: 0.2rem solid black;
 }
 
 @media (max-width: 28.75em) {
@@ -131,12 +129,12 @@ li:hover {
 }
 
 .code {
-    color: #ff7f50;
+    color: #fd6d38;
     transition: color 0.3s ease-out;
 }
 
 .project:hover .code {
-    color: #ff7f50;
+    color: #f86b37;
 }
 
 .project-image {
@@ -148,4 +146,18 @@ li:hover {
 .project-title {
     font-size: 2rem;
     padding: 2rem 0.5rem;
+    color: black;
+    align-items: center;
+}
+
+.quadrado {
+    background: var(--cor1);
+    width: 400px;
+    height: 50px;
+    color: black;
+}
+
+#contact{
+    
+    align-items: center;
 }
