--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
-    --cor1: #00DFC0;
-    --cor2: #572ab0;
+    --cor1: #e483f9;
+    --cor2: #8f05ac;
+    --cor3: #455a64;
 }
 
 .nav {
@@ -10,10 +11,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
-    background-color: var(--cor1);
-    color: white;
+    box-shadow: 0 2px 0 var(--cor2);
     z-index: 10;
+    background-color: white;
 }
 
 .navlink {
@@ -27,25 +27,19 @@ a {
 
 li {
     list-style: none;
-    color: white;
+    color: var(--cor1);
     font-size: 25px;
     padding: 10px
 }
 
 li:hover {
-    background-color: rgba(255, 255, 255, 0.788);
     border-radius: 25px;
-    color: var(--cor2);
-
+    color: black;
 }
 
 #welcome-section {
     display: flex;
     flex-direction: column;
-    /*
-    justify-content: center;
-    align-items: center;
-    */
     width: 100%;
     height: 100vh;
     background-color: white;
@@ -54,40 +48,47 @@ li:hover {
 
 #welcome-section h1 {
     font-family: 'Montserrat', sans-serif;
-    color: black;
+    color: var(--cor3);
     font-size: 50px;
     margin-top: 250px;
     margin-left: 30px;
 }
 
 #welcome-section p {
-    color: #572ab0;
+    color: var(--cor2);
     font-size: 30px;
     font-family: 'Work Sans', sans-serif;
     margin-left: 30px;
     margin-top: -20px;
 }
 
-.img-secao-um {
+#img-um {
     position: absolute;
     left: 60%;
     top: 20%;
-
+    height: auto;
 }
+
+#img-dois{
+    position: relative;
+    bottom: 0;
+}
+
 
 #projects {
     background-color: white;
     padding: 10rem 2rem;
-
 }
 
+
 #projects h2 {
-    color: black;
+    color: var(--cor3) ;
     font-size: 49px;
     max-width: 640px;
     margin: 0 auto 6rem auto;
-    border-bottom: 0.2rem solid black;
+    border-bottom: 0.2rem solid var(--cor3);
 }
+
 
 @media (max-width: 28.75em) {
     .projects-section-header {
@@ -95,11 +96,6 @@ li:hover {
     }
 }
 
-.project-imag {
-    height: calc(100% - 6.8rem);
-    width: 100%;
-    object-fit: cover;
-}
 
 .projects-grid {
     display: grid;
@@ -122,20 +118,15 @@ li:hover {
     }
 }
 
-.project {
-    background: white;
-    box-shadow: 1px 1px 2px rgba(4, 59, 238, 0.5);
-    border-radius: 5px;
-}
-
 .code {
-    color: #fd6d38;
+    color: #f50e02;
     transition: color 0.3s ease-out;
 }
 
 .project:hover .code {
-    color: #f86b37;
+    color: #7ef51e;
 }
+
 
 .project-image {
     height: calc(100% - 6.8rem);
@@ -143,21 +134,24 @@ li:hover {
     object-fit: cover;
 }
 
-.project-title {
-    font-size: 2rem;
-    padding: 2rem 0.5rem;
-    color: black;
-    align-items: center;
+.descricao{
+    font-size: 20px;
+    text-align: center;
 }
 
-.quadrado {
-    background: var(--cor1);
+.div-retangulo {
+    background: var(--cor2);
     width: 400px;
     height: 50px;
+    color: #f8f8ff;
+}
+
+.div-retangulo:hover {
+    background-image: linear-gradient(to right, #e483f9, #8f05ac,#652bb3);
     color: black;
 }
 
+/*
 #contact{
-    
     align-items: center;
 }
