--- a/style.css
+++ b/style.css
@@ -47,12 +47,13 @@ li:hover {
 }
 
 #welcome-section h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-family:  'Special Elite', cursive;
     color: var(--cor3);
     font-size: 50px;
     margin-top: 250px;
     margin-left: 30px;
 }
+
 
 #welcome-section p {
     color: var(--cor2);
@@ -65,7 +66,7 @@ li:hover {
 #img-um {
     position: absolute;
     left: 60%;
-    top: 20%;
+    top: 15%;
     height: auto;
 }
 
