--- a/style.css
+++ b/style.css
@@ -200,9 +200,10 @@ font-size: 4em;
     background-color: var(--cor2);
 }
 
-.cont{
-margin: 0 auto;
-    
+.container-link{
+display: flex;
+justify-content: center;
+margin-bottom: 20px;
 }
 /*
 .linha-footer{
