--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ li:hover {
 }
 #secao-tres h2{
 font-size: 4em;
+
 }
 #secao-tres p{
     font-size: 1.6em;
@@ -203,8 +204,13 @@ font-size: 4em;
 .container-link{
 display: flex;
 justify-content: center;
-margin-bottom: 20px;
+margin-bottom: 100px;
+margin-top: 100px;
+font-size: 20px;
+word-spacing: 7px;
 }
+
+
 /*
 .linha-footer{
     color: #652bb3;
