--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ li:hover {
 
 #welcome-section h1 {
     border-right: 2px solid var(--cor3);
-    font-family:  'Special Elite', cursive;
+    font-family: 'Special Elite', cursive;
     color: var(--cor3);
     font-size: 50px;
     margin-top: 250px;
@@ -58,7 +58,7 @@ li:hover {
 }
 
 .typing.animation {
-    animation: blinkCursor 500ms steps(50) infinite normal, typing 4s steps(50) 1s normal ;
+    animation: blinkCursor 500ms steps(50) infinite normal, typing 4s steps(50) 1s normal;
 }
 
 @keyframes typing {
@@ -66,7 +66,7 @@ li:hover {
         width: 0;
     }
 
-    to { 
+    to {
         width: 18em;
     }
 }
@@ -96,7 +96,7 @@ li:hover {
     height: auto;
 }
 
-#img-dois{
+#img-dois {
     position: relative;
     bottom: 0;
 }
@@ -109,7 +109,7 @@ li:hover {
 
 
 #projects h2 {
-    color: var(--cor3) ;
+    color: var(--cor3);
     font-size: 49px;
     max-width: 640px;
     margin: 0 auto 5rem auto;
@@ -162,7 +162,7 @@ li:hover {
     margin-bottom: -22px;
 }
 
-.descricao{
+.descricao {
     font-size: 20px;
     text-align: center;
     padding: 10px;
@@ -176,39 +176,48 @@ li:hover {
 }
 
 .div-retangulo:hover {
-    background-image: linear-gradient(to right, #e483f9, #8f05ac,#652bb3);
+    background-image: linear-gradient(to right, #e483f9, #8f05ac, #652bb3);
     color: rgb(168, 168, 168);
 }
 
-#secao-tres{
+#secao-tres {
     text-align: center;
     line-height: 20px;
 }
-#secao-tres h2{
-font-size: 4em;
 
-
+#secao-tres h2 {
+    font-size: 4em;
 }
-#secao-tres p{
+
+#secao-tres p {
     font-size: 1.6em;
-    margin-top:-10px;
+    margin-top: -10px;
 }
 
 /* finalizar rodapé*/
-#footer{
+#footer {
     width: 100%;
-    height: 50px;    
+    height: 50px;
     border-top: 0.2rem solid var(--cor3);
     background-color: var(--cor2);
 }
 
-.container-link{
-display: flex;
-justify-content: center;
-margin-bottom: 100px;
-margin-top: 100px;
-font-size: 20px;
-word-spacing: 5px;
+.container-link {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+    margin-top: 100px;
+    font-size: 20px;
+    word-spacing: 5px;
+    color: black;
+}
+
+.container-link a:hover {
+    color: var(--cor2);
+}
+
+.container-link a:visited{
+    color: black;
 }
 
 
@@ -219,4 +228,3 @@ word-spacing: 5px;
     width: 100%;
     height: 2px;
 }
-
