--- a/style.css
+++ b/style.css
@@ -194,7 +194,6 @@ li:hover {
     margin-top: -10px;
 }
 
-
 footer p {
     color: inherit;
     margin: 0;
@@ -205,11 +204,19 @@ footer p {
     font-size: 15px;
     justify-content: space-between;
     margin: 0;
-    padding: 1rem 4vw;
-    border-top: 0.2rem solid var(--cor1);
+    padding: 0.5rem 2vw;
 }
 
-
+footer::before{
+    content: '';
+    width: 100%;
+    display: block;
+    height: 2px;
+    margin: 100px auto 0 auto;
+    background-color: var(--cor2);
+    margin-top: -5px;
+    margin-bottom: 30px;
+}
 /*
 #footer {
     position: absolute;  
