--- a/style.css
+++ b/style.css
@@ -236,8 +236,8 @@ footer::before{
     margin-bottom: 100px;
     margin-top: 100px;
     font-size: 20px;
-    word-spacing: 5px;
     color: black;
+    gap: 25px;
 }
 
 /*corrigir */
