--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ footer::before{
     margin-top: 100px;
     font-size: 20px;
     color: black;
+    word-spacing: 10px;
 }
 
 .container-link a{
