--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -57,7 +57,7 @@ li:hover {
     background-repeat: no-repeat;
 }
 
-.meuNome{
+.meuNome {
     width: 50%;
     padding: 50px;
 }
@@ -77,18 +77,18 @@ li:hover {
 
 }
 
-.coluna{
+.coluna {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 #img-um {
     width: 50%;
     height: auto;
-    z-index: 1; 
+    z-index: 1;
     padding-left: 130px;
 }
 
@@ -135,7 +135,7 @@ li:hover {
     transition: color 0.3s ease-out;
 }
 
-.project-image{
+.project-image {
     width: 380px;
     padding: 20px;
 }
@@ -151,7 +151,7 @@ li:hover {
     color: white;
 }
 
-.descricao:hover{
+.descricao:hover {
     color: rgb(216, 215, 215);
 }
 
@@ -178,7 +178,7 @@ li:hover {
     font-style: italic;
 }
 
-#contact{
+#contact {
     height: 70vh;
 }
 
@@ -197,7 +197,7 @@ footer p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-footer::before{
+footer::before {
     content: '';
     width: 100%;
     display: block;
@@ -218,15 +218,15 @@ footer::before{
     word-spacing: 10px;
 }
 
-.container-link a{
-color: black;
+.container-link a {
+    color: black;
 }
 
-.container-link a:hover{
+.container-link a:hover {
     color: #8f05ac;
 }
 
-.container-link a:visited:hover{
+.container-link a:visited:hover {
     color: #8f05ac;
 }
 
@@ -246,19 +246,38 @@ color: black;
     .projects-section-header {
         font-size: 4rem;
     }
+
     #projects h2 {
         font-size: 20px;
     }
 
-    #img-um{
+    #img-um {
         display: none;
     }
 
-    #secao-tres h2{
-        font-size: 20px;
+    #secao-tres h2 {
+        font-size: 25px;
     }
 
-        #projects{
-            display: none;
-        }
+    #projects {
+        display: none;
+    }
+}
+
+
+@media (max-width: 375px) {
+    #secao-tres h2 {
+        font-size: 35px;
+        margin-top: 200px ;
+    }
+
+    #secao-tres p {
+        font-size: 22px;
+        
+    }
+
+    .container-link {
+        font-size: 15px;
+        margin-top: 300px;
+    }
 }
