--- a/style.css
+++ b/style.css
@@ -37,12 +37,12 @@ a {
 li {
     list-style: none;
     color: var(--cor1);
-    font-size: 25px;
-    padding: 10px
+    font-size: 1.5625rem;
+    padding: 0.625rem;
 }
 
 li:hover {
-    border-radius: 25px;
+    border-radius: 1.5625rem;
     color: black;
 }
 
@@ -59,17 +59,19 @@ li:hover {
 
 .meuNome {
     width: 55%;
-    padding-left: 50px;
+    padding-left: 3.125rem;
 }
 
 .meuNome h1 {
-    border-right: 2px solid var(--cor3); /*traço do lado do nome*/
+    border-right: 0.125rem solid var(--cor3); /*traço do lado do nome*/
     font-family: 'Special Elite', cursive;
     color: var(--cor3);
-    font-size: 50px;
+    font-size: 3.125rem;
     white-space: nowrap;
     overflow: hidden;
 }
+
+/* ========================================================== */
 
 .typing-animation{
     animation: cursor 500ms steps(40) infinite normal, 
@@ -84,7 +86,6 @@ li:hover {
     }
 }
 
-
 @keyframes cursor {
     from {
         border-right-color: #455a64;
@@ -95,9 +96,11 @@ li:hover {
     }
 }
 
+/* ========================================================== */
+
 .meuNome p {
     color: var(--cor2);
-    font-size: 30px;
+    font-size: 1.875rem;
     font-family: 'Work Sans', sans-serif;
 }
 
@@ -114,7 +117,7 @@ li:hover {
     width: 45%;
     height: auto;
     z-index: 1;
-    padding-left: 130px;
+    padding-left: 8.125rem;
 }
 
 #img-um img {
@@ -135,8 +138,8 @@ li:hover {
 
 #projects h2 {
     color: black;
-    font-size: 40px;
-    max-width: 640px;
+    font-size: 2.5rem;
+    max-width: 41.875rem;
     margin: 0 auto 5rem auto;
     border-bottom: 0.2rem solid black;
 }
@@ -147,10 +150,10 @@ li:hover {
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
     grid-gap: 4rem;
     width: 100%;
-    max-width: 1280px;
+    max-width: 80rem;
     margin: 0 auto;
     margin-bottom: 2rem;
 }
@@ -161,8 +164,8 @@ li:hover {
 }
 
 .project-image {
-    width: 380px;
-    padding: 20px;
+    width: 23.75rem;
+    padding: 1.25rem;
 }
 
 .project-image img {
@@ -170,9 +173,9 @@ li:hover {
 }
 
 .descricao {
-    font-size: 20px;
+    font-size: 1.25rem;
     text-align: center;
-    padding: 10px;
+    padding: 0.625rem;
     color: white;
 }
 
@@ -183,7 +186,7 @@ li:hover {
 .div-retangulo {
     background: var(--cor2);
     width: 100%;
-    height: 40px;
+    height: 2.5rem;
 }
 
 .div-retangulo:hover {
@@ -214,7 +217,7 @@ footer p {
     background-color: var(--cor2);
     display: flex;
     flex-direction: column;
-    font-size: 15px;
+    font-size: 0.9375rem;
     justify-content: space-between;
     margin: 0;
     padding: 0.5rem 2vw;
@@ -226,21 +229,21 @@ footer::before {
     content: '';
     width: 100%;
     display: block;
-    height: 2px;
-    margin: 100px auto 0 auto;
+    height: 0.125rem;
+    margin: 6.25rem auto 0 auto;
     background-color: var(--cor2);
-    margin-top: -5px;
-    margin-bottom: 30px;
+    margin-top: -0.3125rem;
+    margin-bottom: 1.875rem;
 }
 
 .container-link {
     display: flex;
     justify-content: center;
-    margin-bottom: 100px;
-    margin-top: 100px;
-    font-size: 20px;
+    margin-bottom: 6.25rem;
+    margin-top: 6.25rem;
+    font-size: 1.25rem;
     color: black;
-    word-spacing: 10px;
+    word-spacing: 0.625rem;
 }
 
 .container-link a {
@@ -267,13 +270,13 @@ footer::before {
     }
 }
 
-@media (max-width: 360px) {
+@media (max-width: 1.25rem) {
     .projects-section-header {
         font-size: 4rem;
     }
 
     #projects h2 {
-        font-size: 20px;
+        font-size: 1.25rem;
     }
 
     #img-um {
@@ -281,7 +284,7 @@ footer::before {
     }
 
     #secao-tres h2 {
-        font-size: 25px;
+        font-size: 1.5625rem;
     }
 
     #projects {
@@ -290,19 +293,19 @@ footer::before {
 }
 
 
-@media (max-width: 375px) {
+@media (max-width: 23.4375rem) {
     #secao-tres h2 {
-        font-size: 35px;
-        margin-top: 200px;
+        font-size: 2.1875rem;
+        margin-top: 12.5rem;
     }
 
     #secao-tres p {
-        font-size: 22px;
+        font-size: 1.375rem;
 
     }
 
     .container-link {
-        font-size: 15px;
-        margin-top: 300px;
+        font-size: 0.9375rem;
+        margin-top: 18.75rem;
     }
 }
