--- a/style.css
+++ b/style.css
@@ -318,8 +318,27 @@ footer::before {
     }
 
     .meuNome h1 {
-        font-size: 40px;
-        white-space: normal;
+    font-size: 59px;
+    }
+
+    .meuNome p {
+        font-size: 25px;
+        white-space: nowrap;
+    }
+
+    .meuNome p::after {
+        content: '';
+        width: 100%;
+        display: block;
+        height: 0.125rem;
+        margin: 6.25rem auto 0 auto;
+        background-color: var(--cor2);
+        margin-top: -0.3125rem;
+        margin-bottom: 1.875rem;
+    }
+
+    #img-dois {
+        width: 0%;
     }
 
     #projects h2 {
@@ -349,21 +368,12 @@ footer::before {
         border-radius: 7px ;
         border: 1px solid black;
         box-shadow: 5px 4px 3px var(--cor2);
-        width: 130%;
+        width: 220px;
         height: 30px;
         text-align: center;
         margin-bottom: 20px;
         padding-top: 5px;
     }
 
-    /*
-    .container-link a{
-        display: block;
-        height: 20px;
-        border-radius: 5px;
-        background-color: #652bb3;
-        line-height: 50px;
 
-    }
-*/
 }
