seção um ajustada

--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ li:hover {
     overflow: hidden;
     letter-spacing: .5rem;
     word-spacing: 5px;
+    white-space: nowrap;
+    
 }
 
 .meuNome p {
@@ -274,6 +276,7 @@ footer::before {
 
 
 @media (max-width: 23.4375rem) {
+
     #secao-tres h2 {
         font-size: 2.1875rem;
         margin-top: 12.5rem;
@@ -293,14 +296,25 @@ footer::before {
         width: 0%;
     }
 
+    .meuNome{
+        padding: 0;
+    }
+
     .meuNome h1 {
-        font-size: 59px;
+        font-size: 3.0rem;
+        font-weight: 600;
+        overflow-wrap: break-word;
+        padding: 20px;
     }
 
     .meuNome p {
-        font-size: 25px;
+        font-size: 1.2rem;
         white-space: nowrap;
+        color: black;
+        font-weight: 600;
+        letter-spacing: -1px;
     }
+
 
     #img-dois {
         width: 0%;
