--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ li:hover {
     letter-spacing: .5rem;
     word-spacing: 5px;
     white-space: nowrap;
-    
+
 }
 
 .meuNome p {
@@ -120,10 +120,14 @@ li:hover {
 
 #projects h2 {
     color: black;
-    font-size: 2.5rem;
-    max-width: 600px;
+    font-size: 2.1rem;
+    max-width: 700px;
     margin: 0 auto 5rem auto;
     border-bottom: 2px solid black;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    letter-spacing: -1px;
+    word-spacing: 5px;
 }
 
 .projects-grid {
@@ -151,10 +155,12 @@ li:hover {
 }
 
 .descricao {
-    font-size: 1.25rem;
+    font-size: 1.20rem;
     text-align: center;
     padding: 0.625rem;
     color: white;
+    font-family: 'Inter', sans-serif;
+    font-weight: 100;
 }
 
 .descricao:hover {
@@ -223,9 +229,10 @@ footer::before {
     justify-content: center;
     margin-bottom: 6.25rem;
     margin-top: 6.25rem;
-    font-size: 1.25rem;
+    font-size: 1.20rem;
     color: black;
     word-spacing: 0.625rem;
+    font-family: 'Inter', sans-serif;
 }
 
 .container-link a {
@@ -276,11 +283,16 @@ footer::before {
 
 
 @media (max-width: 23.4375rem) {
+
     /*
     body {
         text-align: center;
     }
 */
+    li {
+        color: var(--cor2);
+    }
+
     #secao-tres h2 {
         font-size: 2.1875rem;
         margin-top: 12.5rem;
@@ -300,7 +312,7 @@ footer::before {
         width: 0%;
     }
 
-    .meuNome{
+    .meuNome {
         padding: 0;
     }
 
@@ -309,6 +321,7 @@ footer::before {
         font-weight: 600;
         overflow-wrap: break-word;
         line-height: 45px;
+
     }
 
     .meuNome p {
@@ -317,6 +330,7 @@ footer::before {
         color: black;
         font-weight: 600;
         letter-spacing: -1px;
+        display: flex;
     }
 
 
