--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,14 @@
 body, html{
     width: 100%;
 }
+
 :root {
     --cor1: #e483f9;
     --cor2: #8f05ac;
     --cor3: #455a64;
+    
+    font-size: 62.5%;
+    /* 10px  --- 1rem */
 }
 
 /* ========================================================== */
