--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,4 @@
-@media (max-width: 490px) {
-    .projects-section {
-        padding: 96px 16px;
-    }
+@media (min-width: 490px) {
 
     .projects-grid {
         grid-template-columns: 1fr;
@@ -9,55 +6,50 @@
 }
 
 
-@media (max-width: 375px) {
-
-    /*
-    body {
-        text-align: center;
-    }
-*/
-
-    .nav {
-        width: 100%;
-    }
+@media (min-width: 320px ) and (max-width: 720px){
 
     li {
         color: var(--cor2);
     }
 
-    #secao-tres h2 {
-        font-size: 35px;
-        margin-top: 200px;
-    }
 
-    #secao-tres p {
-        font-size: 22px;
-
-    }
-
-    .container-link {
-        font-size: 15px;
-        margin-top: 300px;
-    }
-
-    #img-um img {
+    #img-um {
         display: none;
     }
 
+    .colum {
+        display: block;
+        width: 100%;
+    }
+
+    #welcome-section {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        background-color: white;
+        background-repeat: no-repeat;
+    }
+
     .meuNome {
-        padding: 0;
+        width: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+
     }
 
     .meuNome h1 {
-        font-size: 48px;
         font-weight: 600;
         overflow-wrap: break-word;
-        line-height: 45px;
+        line-height: 7rem;
+        text-align: center;
 
     }
 
     .meuNome p {
-        font-size: 19.2px;
         white-space: nowrap;
         color: black;
         font-weight: 600;
@@ -66,8 +58,22 @@
     }
 
 
-    #img-dois {
-        display: none;
+    /* ================================================= */
+
+
+    #secao-tres h2 {
+        font-size: 3.5rem;
+        margin-top: 200px;
+    }
+
+    #secao-tres p {
+        font-size: 2.2rem;
+
+    }
+
+    .container-link {
+        font-size: 15px;
+        margin-top: 300px;
     }
 
     #projects h2 {
@@ -103,4 +109,119 @@
         margin-bottom: 20px;
         padding-top: 5px;
     }
+
 }
+
+
+@media (max-width: 428px) {
+
+    li {
+        color: var(--cor2);
+    }
+
+
+
+    #img-um {
+        display: none;
+    }
+
+    .colum {
+        display: block;
+        width: 100%;
+    }
+
+    #welcome-section {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        background-color: white;
+        background-repeat: no-repeat;
+    }
+
+    .meuNome {
+        width: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+
+    }
+
+    .meuNome h1 {
+        font-size: 68px;
+        font-weight: 600;
+        overflow-wrap: break-word;
+        line-height: 7rem;
+        text-align: center;
+
+    }
+
+    .meuNome p {
+        font-size: 19.2px;
+        white-space: nowrap;
+        color: black;
+        font-weight: 600;
+        letter-spacing: -1px;
+        display: flex;
+    }
+
+
+
+
+    /* ================================================= */
+
+
+    #secao-tres h2 {
+        font-size: 3.5rem;
+        margin-top: 200px;
+    }
+
+    #secao-tres p {
+        font-size: 2.2rem;
+
+    }
+
+    .container-link {
+        font-size: 15px;
+        margin-top: 300px;
+    }
+
+    #projects h2 {
+        border-bottom: none;
+        font-size: 35px;
+        text-align: center;
+        line-height: 30px;
+        color: var(--cor3);
+    }
+
+    footer p {
+        padding-left: 30px;
+    }
+
+    .container-link {
+        width: 25%;
+        margin: 0 auto;
+        margin-top: 120px;
+    }
+
+    .container-link i {
+        color: var(--cor2);
+        width: none;
+    }
+
+    .links-contatos {
+        border-radius: 7px;
+        border: 1px solid black;
+        box-shadow: 5px 4px 3px var(--cor2);
+        width: 220px;
+        height: 30px;
+        text-align: center;
+        margin-bottom: 20px;
+        padding-top: 5px;
+    }
+
+}
+
+
