--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html {
     display: flex;
     justify-content: flex-end;
     position: fixed;
+    top:0;
     width: 100%;
     z-index: 10;
     background-color: white;
@@ -58,12 +59,8 @@ li:hover {
 /* ========================================================== */
 
 #welcome-section {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
     height: 100vh;
     background-color: white;
-    background-repeat: no-repeat;
 }
 
 .container-colunas {
