--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,8 @@ li:hover {
 
 .container-colunas {
     width: 100%;
-    height: 90%;
+    height: 55vh;
+    margin-top: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -107,7 +108,7 @@ li:hover {
 }
 
 #img-dois {
-    position: absolute;
+    position: relative;
     bottom: 0;
 }
 
