--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,9 +1,11 @@
+/*
 @media (min-width: 490px) {
 
     .projects-grid {
         grid-template-columns: 1fr;
     }
 }
+*/
 
 
 @media (min-width: 320px) and (max-width: 720px) {
@@ -17,12 +19,9 @@
     }
 
     #welcome-section {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
         height: 100vh;
         background-color: white;
-        background-repeat: no-repeat;
+        margin-bottom: 128px;
     }
 
     .container-colunas {
