modificação do conainer-colunas

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -26,9 +26,9 @@
 
     .container-colunas {
         width: 100%;
-        height: 90%;
+        height: 100vh;
         display: flex;
-        align-items: cente;
+        align-items: center;
         justify-content: start;
     }
 
