adicional de código no h1 da class meuNome

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -39,6 +39,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
 
     .meuNome h1 {
