modificação no h1 do meuNome

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -46,7 +46,7 @@
         width: 100%;
         font-weight: bold;
         font-size: 5rem;
-        overflow-wrap: break-word;
+        line-height: 6rem;
         text-align: center;
     }
 
