--- a/css/mobile.css
+++ b/css/mobile.css
@@ -21,7 +21,7 @@
     #welcome-section {
         height: 100vh;
         background-color: white;
-        margin-bottom: 128px;
+        margin-bottom: 6rem;
     }
 
     .container-colunas {
@@ -45,13 +45,13 @@
     .meuNome h1 {
         width: 100%;
         font-weight: bold;
-        font-size: 5rem;
+        font-size: 7rem;
         line-height: 6rem;
         text-align: center;
     }
 
     .meuNome p {
-        font-size: 19.2px;
+        font-size: 3rem;
         white-space: nowrap;
         color: black;
         font-weight: 600;
