--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,3 @@
-
 @media (min-width: 320px) and (max-width: 720px) {
     .projects-grid {
         grid-template-columns: 1fr;
@@ -79,6 +78,10 @@
         text-align: center;
         line-height: 30px;
         color: black;
+    }
+
+    .descrição {
+        font-size: 40px;
     }
 
     footer p {
