--- a/css/mobile.css
+++ b/css/mobile.css
@@ -78,7 +78,7 @@
 
     #projects h2 {
         border-bottom: none;
-        font-size: 30px;
+        font-size: 2rem;
         text-align: center;
         line-height: 30px;
         color: black;
@@ -118,7 +118,126 @@
     }
 
 }
+@media (max-width: 375px) {
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
 
+    li {
+        color: var(--cor2);
+    }
+
+    #img-um {
+        display: none;
+    }
+
+    #img-dois {
+        display: none;
+    }
+
+    #welcome-section {
+        height: 100vh;
+        background-color: white;
+        margin-bottom: 6rem;
+    }
+
+    .container-colunas {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+    }
+
+    .meuNome {
+        width: 100%;
+        padding-left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .meuNome h1 {
+        width: 100%;
+        font-weight: bold;
+        font-size: 7rem;
+        line-height: 6rem;
+        text-align: center;
+    }
+
+    .meuNome p {
+        font-size: 3rem;
+        white-space: nowrap;
+        color: black;
+        font-weight: 600;
+        letter-spacing: -1px;
+        display: flex;
+    }
+
+    /* ================================================= */
+
+
+    #secao-tres h2 {
+        font-size: 4rem;
+    }
+
+    #secao-tres p {
+        font-size: 2.2rem;
+    }
+
+    .container-link {
+        font-size: 15px;
+    }
+
+    .cont {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #projects h2 {
+        border-bottom: none;
+        font-size: 2rem;
+        text-align: center;
+        line-height: 20px;
+        color: black;
+    }
+
+    .descrição {
+        font-size: 5rem;
+    }
+
+    .div-retangulo {
+        height: 3rem;
+    }
+
+    footer p {
+        padding-left: 30px;
+    }
+
+    .container-link {
+        width: 25%;
+        margin: 0 auto;
+        margin-top: 120px;
+    }
+
+    .container-link i {
+        color: var(--cor2);
+        width: none;
+    }
+
+    .links-contatos {
+        border-radius: 7px;
+        border: 1px solid black;
+        box-shadow: 5px 4px 3px var(--cor2);
+        height: 30px;
+        text-align: center;
+        margin-bottom: 20px;
+        padding-top: 5px;
+    }
+
+}
 @media (max-width: 414px) {
     .projects-grid {
         grid-template-columns: 1fr;
