--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,6 @@
 
-@media (min-width: 720px) and (max-width: 720px) {
+
+@media (max-width: 720px) {
     .projects-grid {
         grid-template-columns: 1fr;
     }
@@ -621,7 +622,8 @@
 
 }
 
-@media (max-width: 280px) {
+
+@media (min-width: 280) and (max-width: 375px) {
     .projects-grid {
         grid-template-columns: 1fr;
     }
@@ -726,7 +728,7 @@
     .container-link {
         width: 25%;
         margin: 0 auto;
-        margin-top: 90px;
+        margin-top: 120px;
     }
 
     .container-link i {
