--- a/css/mobile.css
+++ b/css/mobile.css
@@ -49,37 +49,6 @@
 
     /* ================================================= */
 
-    .projects-grid {
-        grid-template-columns: 1fr;
-    }
-
-    .container-colunas {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: start;
-    }
-
-
-
-
-    #secao-tres h2 {
-        font-size: 4rem;
-    }
-
-    #secao-tres p {
-        font-size: 2.2rem;
-    }
-
-    .container-link {
-        font-size: 15px;
-    }
-
-    .cont {
-        display: flex;
-        flex-direction: column;
-    }
 
     #projects h2 {
         border-bottom: none;
@@ -97,9 +66,37 @@
         height: 3rem;
     }
 
-    footer p {
-        padding-left: 30px;
+    /* ================================================= */
+
+    .projects-grid {
+        grid-template-columns: 1fr;
     }
+
+    .container-colunas {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+    }
+
+    #secao-tres h2 {
+        font-size: 4rem;
+    }
+
+    #secao-tres p {
+        font-size: 2.2rem;
+    }
+
+    .cont {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container-link {
+        font-size: 15px;
+    }
+
 
     .container-link {
         width: 25%;
@@ -120,6 +117,10 @@
         text-align: center;
         margin-bottom: 20px;
         padding-top: 5px;
+    }
+
+    footer p {
+        padding-left: 30px;
     }
 
 }
