media max width 720px atualizado

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -80,6 +80,7 @@
         justify-content: start;
     }
 
+    /* ========================================================== */
     #secao-tres h2 {
         font-size: 4rem;
     }
