--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,3 @@
-
-
 @media (max-width: 720px) {
 
     li {
@@ -126,20 +124,9 @@
 
 }
 @media (max-width: 375px) {
-    .projects-grid {
-        grid-template-columns: 1fr;
-    }
 
     li {
         color: var(--cor2);
-    }
-
-    #img-um {
-        display: none;
-    }
-
-    #img-dois {
-        display: none;
     }
 
     #welcome-section {
@@ -148,12 +135,12 @@
         margin-bottom: 6rem;
     }
 
-    .container-colunas {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: start;
+    #img-um {
+        display: none;
+    }
+
+    #img-dois {
+        display: none;
     }
 
     .meuNome {
@@ -185,22 +172,8 @@
 
     /* ================================================= */
 
-
-    #secao-tres h2 {
-        font-size: 4rem;
-    }
-
-    #secao-tres p {
-        font-size: 2.2rem;
-    }
-
-    .container-link {
-        font-size: 15px;
-    }
-
-    .cont {
-        display: flex;
-        flex-direction: column;
+    .projects-grid {
+        grid-template-columns: 1fr;
     }
 
     #projects h2 {
@@ -219,8 +192,31 @@
         height: 3rem;
     }
 
-    footer p {
-        padding-left: 30px;
+    .container-colunas {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+    }
+
+  /* ================================================= */
+
+    #secao-tres h2 {
+        font-size: 4rem;
+    }
+
+    #secao-tres p {
+        font-size: 2.2rem;
+    }
+
+    .container-link {
+        font-size: 15px;
+    }
+
+    .cont {
+        display: flex;
+        flex-direction: column;
     }
 
     .container-link {
@@ -242,6 +238,10 @@
         text-align: center;
         margin-bottom: 20px;
         padding-top: 5px;
+    }
+
+    footer p {
+        padding-left: 30px;
     }
 
 }
